[package]
name = "ct-tools"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
edition = "2018"

[dependencies]
futures = ">=0.3.1"
tokio = { version = ">=0.2.0", features = ["time", "macros", "process", "tcp", "stream"] }
tokio-rustls = ">=0.12.0"
socket2 = { version = "0.3", features = ["reuseport"] }

base64 = ">=0.10"
structopt = "0.3"
structopt-derive = "0.4"
hex = "0.4"

hyper = "0.13.9"
tower-service = "0.3.0"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }

openssl = ">=0.10"

ring = "0.16"

rustls = { version = ">=0.11", features = ["dangerous_configuration"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pem = "0.8"
prettytable-rs = "0.8"

tera = ">=0.10.4"

url = "2.2"

webpki = ">=0.18.0"
